[gd_scene load_steps=9 format=3 uid="uid://dvngxkcptpusm"]

[ext_resource type="Script" path="res://game_loop/input_select/player_select.gd" id="1_rsjcr"]
[ext_resource type="Texture2D" uid="uid://vfqj3mvfe4pm" path="res://game_loop/input_select/input_select.webp" id="2_7ohnm"]
[ext_resource type="Texture2D" uid="uid://c2ja5gmg3ljqk" path="res://players/players.webp" id="3_jp3wh"]
[ext_resource type="Theme" uid="uid://c2a7nkhpt7afl" path="res://ui/default_theme.tres" id="4_sag6r"]
[ext_resource type="PackedScene" uid="uid://cg4t1l5nufk4l" path="res://game_loop/input_select/input_hint.tscn" id="5_m3dq8"]

[sub_resource type="Animation" id="Animation_w74kk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerIcon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerIcon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5rxk1"]
resource_name = "player_ready_wiggle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerIcon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerIcon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.447059)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wd7ee"]
_data = {
"RESET": SubResource("Animation_w74kk"),
"player_ready_wiggle": SubResource("Animation_5rxk1")
}

[node name="PlayerSelect" type="Node2D"]
script = ExtResource("1_rsjcr")

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("2_7ohnm")

[node name="PlayerIcon" type="Sprite2D" parent="."]
position = Vector2(0, -351)
texture = ExtResource("3_jp3wh")
hframes = 4
vframes = 2
frame = 4

[node name="LabelPlayerNumber" type="Label" parent="."]
offset_left = -192.0
offset_top = -32.0
offset_right = 206.0
offset_bottom = 34.0
theme = ExtResource("4_sag6r")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelInstruction" type="Label" parent="."]
offset_left = -256.0
offset_top = 103.0
offset_right = 256.0
offset_bottom = 285.0
theme = ExtResource("4_sag6r")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "Press ENTER (keyboard) or ANY (gamepad) to login a new player."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="InputHint" parent="." instance=ExtResource("5_m3dq8")]
position = Vector2(0, 444)
scale = Vector2(0.75, 0.75)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wd7ee")
}
